CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(max_height)

# Find MPI
FIND_PACKAGE(MPI)
IF(MPI_FOUND)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ELSE(MPI_FOUND)
	MESSAGE(FATAL_ERROR "MPI not found")
ENDIF(MPI_FOUND)

# Find EDDL
FIND_PACKAGE(EDDL)
IF(NOT EDDL_FOUND)
	MESSAGE(FATAL_ERROR "EDDL not found")
ENDIF(NOT EDDL_FOUND)

# Set the build type to Release
IF (NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose build type (Debug, Release)" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

# Build max_height
ADD_EXECUTABLE(max_height max_height.cxx)
TARGET_LINK_LIBRARIES(max_height PUBLIC EDDL::eddl ${MPI_LIBRARIES})

